# CMakeDemo

./: CMakeLists.txt  README.md
examples/01-starting/: CMakeLists.txt  make.sh  starting.cpp
examples/02-better/: CMakeLists.txt  make.sh
examples/02-better/src/: CMakeLists.txt  better.cpp
examples/03-lib/: CMakeLists.txt  make.sh
examples/03-lib/lib/: CMakeLists.txt  hello.cpp
examples/04-link/: make.sh
examples/04-link/src/: CMakeLists.txt  link.cpp
examples/05-model/src/: CMakeLists.txt  model.cpp
examples/06-find/: CMakeLists.txt
examples/06-find/cmake/: FindHELLO.cmake
examples/06-find/src/: CMakeLists.txt  find.cpp
